--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,10 @@
             = flash[:alert]
         .head
           = image_tag 'header-image-3.png', class: 'header-image'
-          %h1= link_to 'ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ', root_path
+          .head-text-container
+            %h1= link_to "ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ: <br><br> <i>СУКОВОЙ НАТАЛЬИ АЛЕКСЕЕВНЫ</i>".html_safe, root_path
+            %p
+              %q Учитель - помощник в искании ребёнком путей к совершенству, в процессе его пробуждений и становления личности. Каждый день, каждый урок пусть ученик удивляется доброте учителя, его профессионализму и эрудиции.
         = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: '#008D94'}
     %main.container
       = render partial: 'layouts/svg', locals: {points: '0,100 100,0 100,100', fill: '#defeff'}
