--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -84,10 +84,6 @@ text {
   margin: 0;
   padding: 10px;
   text-align: center;
-  position: relative;
-  top: 35%;
-  width: 70%;
-  margin-left: 30%;
   a {
     color: white;
     &:hover{
@@ -99,6 +95,19 @@ text {
       text-decoration: none;
     }
   }
+  }
+}
+
+.head-text-container{
+  position: absolute;
+  top: 50%;
+  width: 70%;
+  transform: translateY(-50%);
+  margin-left: 30%;
+  color: white;
+  p{
+    font-size: 1.4rem;
+    text-align: center;
   }
 }
 
@@ -340,9 +349,11 @@ footer.container.mobile-fixed{
   margin-left: 20px;
 }
 .category-image{
-  height: 80%;
-  width: 80%;
+  height: 240px;
+  width: 240px;
   object-fit: cover;
+  border-radius: 10%;
+  margin-bottom: 10px;
 }
 .comment-date{
   font-size: 1rem;
@@ -368,6 +379,14 @@ footer.container.mobile-fixed{
 .edit_comment, .delete_comment{
   margin: 20px 0;
 }
+.last{
+  text-align: center;
+  text-transform: uppercase;
+}
+.time{
+  text-align: center;
+  margin-bottom: 10px;
+}
 @media only screen and (max-width: 1024px){
   .container{
     width: 90%;
@@ -379,9 +398,10 @@ footer.container.mobile-fixed{
   .header-image{
     width: 35%;
   }
-  .head h1{
+  .head-text-container{
     width: 65%;
-    margin-left: 35%;
+    top: 55%;
+    margin-left: 33%;
   }
 }
 
@@ -390,13 +410,22 @@ footer.container.mobile-fixed{
     font-size: 56px;
     line-height: 56px;
   }
+  .last{
+    font-size: 56px;
+  }
+  .category-image{
+    height: 500px;
+    width: 500px;
+  }
   .head{
     height: 450px;
   }
-  .head h1{
-    top: 30%;
+  .head-text-container{
     width: 55%;
     margin-left: 45%;
+  }
+  .head-text-container q{
+    display: none;
   }
   .header-image{
     width: 45%;
