--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -16,5 +16,8 @@
   .form-group
     = f.label :Тело_поста
     = f.text_area :body, id: 'wysiwyg'
+  .form-group
+    = f.label :Картинка_для_Social_Sharing
+    = f.file_field :image, class: 'form-control'
   .actions
     = f.submit class: 'btn btn-my'
