--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -11,7 +11,10 @@
           %td.no-border= link_to 'Редактировать', edit_category_post_path(@category, @post)
         %td.no-border= link_to 'Назад', category_path(@category)
     %br
-    = social_share_button_tag(@post.title, desc: @post.description, image: @post.category.image)
+    - if @post.image?
+      = social_share_button_tag(@post.title, image: @post.image, desc: @post.description)
+    - else
+      = social_share_button_tag(@post.title, image: @post.category.image, desc: @post.description)
     %br
     -if current_user
       Оценка поста: #{rating_for @post, 'post_rating', enable_half: true, cancel_hint: 'Отменить эту оценку'}
