--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,3 +35,4 @@
 @import 'plugins/table.min.css';
 @import 'plugins/video.min.css';
 @import 'social-share-button';
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Poiret+One');
