--- a/app/assets/stylesheets/scaffolds.scss.erb
+++ b/app/assets/stylesheets/scaffolds.scss.erb
@@ -4,7 +4,7 @@ header {
 }
 
 body {
-  background-image: url(math_background.png);
+  background-image: url("<%= asset_path('math_background.png') %> ");
   color: #565695;
   font-size: 18px;
   line-height: 18px;
@@ -116,7 +116,7 @@ h1, h2, h3{
 }
 
 .bg-transparent {
-  background-image: url(math_layout.png);
+  background-image: url("<%= asset_path('math_layout.png') %> ");
   height: 100px;
 }
 
