--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
             %button.close{'data-dismiss' => 'alert'} &times;
             = flash[:alert]
         .head
-          = image_tag 'header-image-3.png', class: 'header-image'
+          = image_tag 'header-image.png', class: 'header-image'
           .head-text-container
             %h1= link_to "ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ: <br><br> <i>СУКОВОЙ НАТАЛЬИ АЛЕКСЕЕВНЫ</i>".html_safe, root_path
             %p
