--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -13,32 +13,32 @@
 //= require jquery
 //= require bootstrap-sprockets
 //= require jquery_ujs
-//= require url("<%= asset_path('froala_editor.min.js') %> ")
-//= require url("<%= asset_path('plugins/align.min.js') %> ")
-//= require url("<%= asset_path('plugins/char_counter.min.js') %> ")
-//= require url("<%= asset_path('plugins/code_beautifier.min.js') %> ")
-//= require url("<%= asset_path('plugins/code_view.min.js') %> ")
-//= require url("<%= asset_path('plugins/colors.min.js') %> ")
-//= require url("<%= asset_path('plugins/emoticons.min.js') %> ")
-//= require url("<%= asset_path('plugins/entities.min.js') %> ")
-//= require url("<%= asset_path('plugins/file.min.js') %> ")
-//= require url("<%= asset_path('plugins/font_family.min.js') %> ")
-//= require url("<%= asset_path('plugins/font_size.min.js') %> ")
-//= require url("<%= asset_path('plugins/fullscreen.min.js') %> ")
-//= require url("<%= asset_path('plugins/image.min.js') %> ")
-//= require url("<%= asset_path('plugins/image_manager.min.js') %> ")
-//= require url("<%= asset_path('plugins/inline_style.min.js') %> ")
-//= require url("<%= asset_path('plugins/line_breaker.min.js') %> ")
-//= require url("<%= asset_path('plugins/link.min.js') %> ")
-//= require url("<%= asset_path('plugins/lists.min.js') %> ")
-//= require url("<%= asset_path('plugins/paragraph_format.min.js') %> ")
-//= require url("<%= asset_path('plugins/paragraph_style.min.js') %> ")
-//= require url("<%= asset_path('plugins/quick_insert.min.js') %> ")
-//= require url("<%= asset_path('plugins/quote.min.js') %> ")
-//= require url("<%= asset_path('plugins/save.min.js') %> ")
-//= require url("<%= asset_path('plugins/table.min.js') %> ")
-//= require url("<%= asset_path('plugins/url.min.js') %> ")
-//= require url("<%= asset_path('plugins/video.min.js') %> ")
-//= require url("<%= asset_path('languages/ru.js') %> ")
+//= require froala_editor.min
+//= require plugins/align.min
+//= require plugins/char_counter.min
+//= require plugins/code_beautifier.min
+//= require plugins/code_view.min
+//= require plugins/colors.min
+//= require plugins/emoticons.min
+//= require plugins/entities.min
+//= require plugins/file.min
+//= require plugins/font_family.min
+//= require plugins/font_size.min
+//= require plugins/fullscreen.min
+//= require plugins/image.min
+//= require plugins/image_manager.min
+//= require plugins/inline_style.min
+//= require plugins/line_breaker.min
+//= require plugins/link.min
+//= require plugins/lists.min
+//= require plugins/paragraph_format.min
+//= require plugins/paragraph_style.min
+//= require plugins/quick_insert.min
+//= require plugins/quote.min
+//= require plugins/save.min
+//= require plugins/table.min
+//= require plugins/url.min
+//= require plugins/video.min
+//= require languages/ru
 //= require social-share-button
 //= require_tree .
