--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -11,13 +11,13 @@
  * It is generally better to create a new file per style scope.
  *
  */
-@import url("<%= asset_path('bootstrap-sprockets') %> ");
-@import url("<%= asset_path('bootstrap') %> ");
-@import url("<%= asset_path('scaffolds') %> ");
-@import url("<%= asset_path('posts') %> ");
-@import url("<%= asset_path('users') %> ");
-@import url("<%= asset_path('categories') %> ");
-@import url("<%= asset_path('font-awesome') %> ");
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+@import 'scaffolds';
+@import 'posts';
+@import 'users';
+@import 'categories';
+@import 'font-awesome';
 @import url("<%= asset_path('froala_editor.min.css') %> ");
 @import url("<%= asset_path('froala_style.min.css') %> ");
 @import url("<%= asset_path('plugins/char_counter.min.css') %> ");
@@ -34,5 +34,5 @@
 @import url("<%= asset_path('plugins/special_characters.min.css') %> ");
 @import url("<%= asset_path('plugins/table.min.css') %> ");
 @import url("<%= asset_path('plugins/video.min.css') %> ");
-@import url("<%= asset_path('social-share-button') %> ");
+@import 'social-share-button';
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display|Poiret+One');
