--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -17,7 +17,7 @@
       = social_share_button_tag(@post.title, image: @post.category.image, desc: @post.description)
     %br
     -if current_user
-      Оценка поста: #{rating_for @post, 'post_rating', enable_half: true, cancel_hint: 'Отменить эту оценку'}
+      Оценка поста: #{rating_for @post, 'post_rating', enable_half: true, cancel_hint: 'Отменить эту оценку', cancel_off: asset_path("cancel-off.png"), star_off: asset_path("star-off.png")}
       %br/
     .list-group.comments
       %a.list-group-item.active
