Added new mailer

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -35,4 +35,4 @@
 @import url("<%= asset_path('plugins/table.min.css') %> ");
 @import url("<%= asset_path('plugins/video.min.css') %> ");
 @import 'social-share-button';
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Poiret+One');
+@import url('https://fonts.googleapis.com/css?family=Exo+2|Poiret+One');
