--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title Blog
     = csrf_meta_tags
+    = favicon_link_tag 'favicon.ico'
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
   %body
@@ -33,7 +34,7 @@
           .head-text-container
             %h1= link_to "ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ: <br><br> <i>СУКОВОЙ НАТАЛЬИ АЛЕКСЕЕВНЫ</i>".html_safe, root_path
             %p
-              %q
+              %q.slogan
                 %i Учитель - помощник в искании ребёнком путей к совершенству, в процессе его пробуждений и становления личности. Каждый день, каждый урок пусть ученик удивляется доброте учителя, его профессионализму и эрудиции.
         = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: '#008D94'}
     %main.container
