--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Blog
+    %title Персональный сайт учителя математики: Суковой Натальи Алексеевны
     = csrf_meta_tags
     = favicon_link_tag 'favicon.ico'
     = stylesheet_link_tag 'application', media: 'all'
@@ -38,7 +38,7 @@
         .head
           = image_tag 'header-image.png', class: 'header-image'
           .head-text-container
-            %h1= link_to "ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ: <br><br> <i>СУКОВОЙ НАТАЛЬИ АЛЕКСЕЕВНЫ</i>".html_safe, root_path
+            %h1= link_to "ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ: <br><br> СУКОВОЙ НАТАЛЬИ АЛЕКСЕЕВНЫ".html_safe, root_path
             %p
               %q.slogan
                 %i Учитель - помощник в искании ребёнком путей к совершенству, в процессе его пробуждений и становления личности. Каждый день, каждый урок пусть ученик удивляется доброте учителя, его профессионализму и эрудиции.
