--- a/app/assets/stylesheets/scaffolds.scss.erb
+++ b/app/assets/stylesheets/scaffolds.scss.erb
@@ -20,16 +20,16 @@ body {
   line-height: 18px;
   margin-top: 0px;
   margin-bottom: 0px;
-  font-family: 'Exo 2', sans-serif;
+  font-family: 'El Messiri', sans-serif;
 }
 
 .slogan{
-  font-family: 'Poiret One';
+  font-family: 'El Messiri', sans-serif;
   font-size: 1.5rem;
 }
 
 .time-index{
-  font-family: 'Poiret One';
+  font-family: 'El Messiri', sans-serif;
   font-weight: bold;
   text-align: center;
   margin: 10px;
@@ -88,7 +88,7 @@ text {
 }
 
 h1, h2, h3{
-  font-family: 'Poiret One';
+  font-family: 'El Messiri', sans-serif;
 }
 
 .header-image{
@@ -331,6 +331,11 @@ h1, h2, h3{
 main .row{
   background-color: #defeff;
   margin: 0;
+  min-height: 20vh;
+}
+
+.no-result{
+  padding-top: 5%;
 }
 
 main.container, footer.container{
@@ -449,6 +454,14 @@ footer.container.mobile-fixed{
 }
 
 @media only screen and (max-device-width:480px){
+  main .row{
+    min-height: 37vh;
+  }
+
+  .no-result{
+    padding-top: 25%;
+  }
+
   .header-list{
     flex-wrap: wrap;
     padding-right: 0;
