--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title Персональный сайт учителя математики: Суковой Натальи Алексеевны
     = csrf_meta_tags
-    = favicon_link_tag 'favicon.ico'
+    = favicon_link_tag 'blackboard.ico'
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
   %body
