--- a/app/assets/stylesheets/scaffolds.scss.erb
+++ b/app/assets/stylesheets/scaffolds.scss.erb
@@ -359,7 +359,9 @@ div.field{
 footer.container.mobile-fixed{
   position: fixed;
   bottom: 0;
-  left: 0;
+  //left: 0;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .read-top-block .svg-container{
